Made education space with some css

--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -10,6 +10,8 @@ nav {
     padding: 7px;
 }
 nav a{
+    color: white;
+    text-decoration: none;
     margin-right: 50px;
     font-size: 24px;
 }
@@ -17,7 +19,13 @@ nav a:hover {
     color: #00afb5;
     cursor: pointer;
 }
-
+.wrapper {
+    display: inline-flex;
+    flex-wrap: wrap;
+}
+h1 {
+    text-shadow: 0px 0px 1px #9dff00;
+}
 .info {
     display: flex;
     flex-direction: column;
@@ -105,41 +113,73 @@ img {
 .fa-envelope {
     color: red;
 }
-.wrapper {
-    display: inline-flex;
-}
-.certificate {
+
+#certificate {
     margin-left: 200px;
+    /*margin-right: 20px;*/
 }
-.certificate h1 {
+#certificate h1 {
     text-align: center;
 }
-.certificate a {
+
+.color85 h3:hover {
+    color: #5efb1d;
+    font-weight: bolder;
+}
+.color75 h3:hover {
+    color: #98ff58;
+    font-weight: bolder;
+}
+.color70 h3:hover {
+    color: #cef94a;
+    font-weight: bolder;
+}
+.color55 h3:hover {
+    color: #f3af32;
+    font-weight: bolder;
+}
+#certificate a {
     text-decoration: none;
     color: black;
     font-size: 20px;
 }
-.color85:hover {
-    color: #5efb1d;
-    font-weight: bolder;
-}
-.color75:hover {
-    color: #98ff58;
-    font-weight: bolder;
-}
-.color70:hover {
-    color: #cef94a;
-    font-weight: bolder;
-}
-.color55:hover {
-    color: #f3af32;
-    font-weight: bolder;
-}
-.certificate a h3 {
+#certificate a h3 {
     margin-bottom: -15px;
 }
-.img-certificate {
-    width: 12%;
-    height: 14%;
-    border-radius: 5px;
+#education {
+    margin-left: 175px;
+    margin-top: 5px;
+}
+.softuni{
+    width: 20%;
+    height: 10%;
+    border-radius: 3px;
+    margin-left: -45px;
+}
+.text {
+    margin-top: -111px;
+    margin-left: 55px;
+}
+.text h3{
+    font-size: 23px;
+    margin-top: 23px;
+    margin-bottom: -18px;
+}
+.text h4{
+    font-size: 20px;
+    margin-top: 15px;
+}
+#data {
+    margin-top: -27px;
+    font-family: cursive;
+    font-size: 13px;
+}
+.text span {
+    margin-right: 25px;
+}
+.text ul{
+    margin-top: 7px;
+}
+.courses{
+    margin-top: -10px;
 }
