--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -10,10 +10,10 @@
 </head>
 <body>
 <nav>
-    <a>Skills</a>
-    <a>Certificates</a>
+    <a href="#skills">Skills</a>
+    <a href="#certificate">Certificates</a>
     <a>Projects</a>
-    <a>Education</a>
+    <a href="#education">Education</a>
     <a>Soft Skills</a>
     <a>Interests</a>
 </nav>
@@ -34,7 +34,7 @@
     </div>
 </div>
 <div class="wrapper">
-<div class="skills">
+<div id="skills">
     <h1>
         Technical Skills
     </h1>
@@ -149,7 +149,7 @@
     </div>
 
 </div>
-    <div class="certificate">
+    <div id="certificate">
         <h1>
             Certificates
         </h1>
@@ -184,6 +184,34 @@
             <h3>JavaScript Applications October 2021</h3>
         </a>
 
+    </div>
+    <div id="education">
+        <h1>Education</h1>
+        <div>
+            <a href="https://softuni.bg">
+                <img class="softuni"
+                     src="https://csharp-book.softuni.org/assets/chapter-0-images/SoftUni-logo-small.png">
+            </a>
+            <div class="text">
+                <h3> Java Web Development Path</h3>
+                <h4> Softuni University, Sofia</h4>
+                <p id="data"> Sep 2020 - Aug 2022</p>
+                <div class="courses">
+                    <span>Courses</span>
+                    <ul>
+                        <li>Java Basics</li><li>Java Fundamentals</li>
+                        <li>Java Advanced</li><li>Java OOP</li>
+                        <li>JavaScript Advanced</li><li>JavaScript Applications</li>
+                        <li>MySQL</li><li>Spring Data</li>
+                        <li>Spring Fundamentals</li><li>Spring Advanced</li>
+                    </ul>
+
+                </div>
+
+            </div>
+
+
+        </div>
     </div>
 </div>
 
