--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -12,8 +12,8 @@
 <nav>
     <a href="#skills">Skills</a>
     <a href="#certificate">Certificates</a>
-    <a>Projects</a>
     <a href="#education">Education</a>
+    <a href="#projects">Projects</a>
     <a>Soft Skills</a>
     <a>Interests</a>
 </nav>
@@ -34,121 +34,121 @@
     </div>
 </div>
 <div class="wrapper">
-<div id="skills">
-    <h1>
-        Technical Skills
-    </h1>
-    <div class="pieContainer">
-        <div class="pieBackground">
-        </div>
-        <div id="pieSlice99_1" class="hold">
-            <div class="pie">
+    <div id="skills">
+        <h1>
+            Technical Skills
+        </h1>
+        <div class="pieContainer">
+            <div class="pieBackground">
             </div>
-        </div>
-        <div id="pieSlice99_2" class="hold">
-            <div class="pie">
+            <div id="pieSlice99_1" class="hold">
+                <div class="pie">
+                </div>
             </div>
-        </div>
-        <div class="stat-circle-cover">
+            <div id="pieSlice99_2" class="hold">
+                <div class="pie">
+                </div>
+            </div>
+            <div class="stat-circle-cover">
       <span class="stat-number">
         85%
       </span>
+            </div>
+            <span class="skill-name">Java</span>
         </div>
-        <span class="skill-name">Java</span>
-    </div>
 
-    <div class="pieContainer">
-        <div class="pieBackground">
-        </div>
-        <div id="pieSlice75_1" class="hold">
-            <div class="pie slice active">
+        <div class="pieContainer">
+            <div class="pieBackground">
             </div>
-        </div>
-        <div id="pieSlice75_2" class="hold">
-            <div class="pie">
+            <div id="pieSlice75_1" class="hold">
+                <div class="pie slice active">
+                </div>
             </div>
-        </div>
-        <div class="stat-circle-cover">
+            <div id="pieSlice75_2" class="hold">
+                <div class="pie">
+                </div>
+            </div>
+            <div class="stat-circle-cover">
       <span class="stat-number">
         75%
       </span>
+            </div>
+            <span class="skill-name">Spring Boot</span>
         </div>
-        <span class="skill-name">Spring Boot</span>
-    </div>
 
-    <div class="pieContainer">
-        <div class="pieBackground">
-        </div>
-        <div id="pieSlice70_1" class="hold">
-            <div class="pie slice active">
+        <div class="pieContainer">
+            <div class="pieBackground">
             </div>
-        </div>
-        <div id="pieSlice70_2" class="hold">
-            <div class="pie">
+            <div id="pieSlice70_1" class="hold">
+                <div class="pie slice active">
+                </div>
             </div>
-        </div>
-        <div class="stat-circle-cover">
+            <div id="pieSlice70_2" class="hold">
+                <div class="pie">
+                </div>
+            </div>
+            <div class="stat-circle-cover">
       <span class="stat-number">
         70%
       </span>
+            </div>
+            <span class="skill-name">MySQL</span>
         </div>
-        <span class="skill-name">MySQL</span>
-    </div>
 
-    <div class="pieContainer">
-        <div class="pieBackground">
-        </div>
-        <div id="pieSlice60_1" class="hold">
-            <div class="pie slice active">
+        <div class="pieContainer">
+            <div class="pieBackground">
             </div>
-        </div>
-        <div id="pieSlice60_2" class="hold">
-            <div class="pie">
+            <div id="pieSlice60_1" class="hold">
+                <div class="pie slice active">
+                </div>
             </div>
-        </div>
-        <div class="stat-circle-cover">
+            <div id="pieSlice60_2" class="hold">
+                <div class="pie">
+                </div>
+            </div>
+            <div class="stat-circle-cover">
       <span class="stat-number">
         60%
       </span>
+            </div>
+            <span class="skill-name">Html</span>
         </div>
-        <span class="skill-name">Html</span>
-    </div>
 
-    <div class="pieContainer">
-        <div class="pieBackground">
-        </div>
-        <div id="pieSlice55_1" class="hold">
-            <div class="pie slice active">
+        <div class="pieContainer">
+            <div class="pieBackground">
             </div>
-        </div>
-        <div id="pieSlice55_2" class="hold">
-            <div class="pie">
+            <div id="pieSlice55_1" class="hold">
+                <div class="pie slice active">
+                </div>
             </div>
-        </div>
-        <div class="stat-circle-cover">
+            <div id="pieSlice55_2" class="hold">
+                <div class="pie">
+                </div>
+            </div>
+            <div class="stat-circle-cover">
       <span class="stat-number">
         55%
       </span>
-        </div>
-        <span class="skill-name">JavaScript</span>
-    </div>
-
-    <div class="pieContainer">
-        <div class="pieBackground">
-        </div>
-        <div id="pieSlice50" class="hold">
-            <div class="pie">
             </div>
+            <span class="skill-name">JavaScript</span>
         </div>
-        <div class="stat-circle-cover">
+
+        <div class="pieContainer">
+            <div class="pieBackground">
+            </div>
+            <div id="pieSlice50" class="hold">
+                <div class="pie">
+                </div>
+            </div>
+            <div class="stat-circle-cover">
       <span class="stat-number">
         50%
       </span>
+            </div>
+            <span class="skill-name">Css</span>
         </div>
-        <span class="skill-name">Css</span>
-    </div>
 
-</div>
+    </div>
     <div id="certificate">
         <h1>
             Certificates
@@ -195,15 +195,20 @@
             <div class="text">
                 <h3> Java Web Development Path</h3>
                 <h4> Softuni University, Sofia</h4>
-                <p id="data"> Sep 2020 - Aug 2022</p>
+                <p class="data-education"> Sep 2020 - Aug 2022</p>
                 <div class="courses">
                     <span>Courses</span>
                     <ul>
-                        <li>Java Basics</li><li>Java Fundamentals</li>
-                        <li>Java Advanced</li><li>Java OOP</li>
-                        <li>JavaScript Advanced</li><li>JavaScript Applications</li>
-                        <li>MySQL</li><li>Spring Data</li>
-                        <li>Spring Fundamentals</li><li>Spring Advanced</li>
+                        <li>Java Basics</li>
+                        <li>Java Fundamentals</li>
+                        <li>Java Advanced</li>
+                        <li>Java OOP</li>
+                        <li>JavaScript Advanced</li>
+                        <li>JavaScript Applications</li>
+                        <li>MySQL</li>
+                        <li>Spring Data</li>
+                        <li>Spring Fundamentals</li>
+                        <li>Spring Advanced</li>
                     </ul>
 
                 </div>
@@ -211,6 +216,31 @@
             </div>
 
 
+        </div>
+        <div>
+            <img class="softuni" src="https://uni-plovdiv.bg/templates/default/img/pu.png">
+            <div class="text">
+                <h3>Physics</h3>
+                <h4>University of Plovdiv "Paisii Hilendarski"</h4>
+                <p class="data-education">Sep 2004 - May 2008</p>
+            </div>
+        </div>
+    </div>
+    <div id="projects">
+        <h1>Personal Projects</h1>
+        <div>
+            <a href="https://github.com/iliyanStavrev/final-project-spring">
+                <h2>Trainings</h2>
+            </a>
+            <a href="https://github.com/iliyanStavrev/springFundamentalsExam">
+                <h2>Spotify music</h2>
+            </a>
+            <a href="https://github.com/iliyanStavrev/Music-App">
+                <h2>Music App</h2>
+            </a>
+            <a href="https://github.com/iliyanStavrev/Coffe-Shop">
+                <h2>Coffee Shop</h2>
+            </a>
         </div>
     </div>
 </div>
