--- a/src/main/resources/static/css/stats.css
+++ b/src/main/resources/static/css/stats.css
@@ -80,7 +80,7 @@
 }
 
 #pieSlice50 .pie {
-    background-color: #d5730e;
+    background-color: #d58f0e;
     -webkit-transform: rotate(180deg);
     -moz-transform: rotate(180deg);
     -o-transform: rotate(180deg);
