--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -1,4 +1,4 @@
-body{
+body {
     background-image: url("/images/background1.jpg");
     background-size: cover;
 }
@@ -9,46 +9,55 @@ nav {
     color: white;
     padding: 7px;
 }
-nav a{
+
+nav a {
     color: white;
     text-decoration: none;
     margin-right: 50px;
     font-size: 24px;
 }
+
 nav a:hover {
     color: rgb(104, 253, 4);
     cursor: pointer;
 }
+
 .wrapper {
     display: inline-flex;
     flex-wrap: wrap;
 }
+
 h1 {
     text-shadow: 0px 0px 1px #9dff00;
 }
+
 .info {
     display: flex;
     flex-direction: column;
     background-color: #5efb1d26;
     border-radius: 5px;
 }
+
 img {
     width: 7%;
     height: 20%;
     border-radius: 5px;
 }
+
 .info h1 {
     margin-left: 99px;
     font-size: 40px;
     margin-top: 3px;
     position: absolute;
 }
+
 .info h3 {
     margin-left: 99px;
     margin-top: -75px;
     font-weight: normal;
     font-size: 24px;
 }
+
 #description {
     margin-top: -20px;
     margin-left: 99px;
@@ -60,11 +69,13 @@ img {
     margin-right: 20px;
     display: inline;
 }
+
 #email {
     margin-right: 20px;
     display: inline;
     color: black;
 }
+
 #address {
     margin-right: 27px;
     display: inline;
@@ -77,12 +88,15 @@ img {
     margin-top: 5px;
 
 }
+
 .social a {
     margin-right: 5px;
 }
-.social a:hover{
+
+.social a:hover {
     cursor: pointer;
 }
+
 /*.fa-linkedin:hover{*/
 /*    color: #0A66C2;*/
 /*}*/
@@ -90,6 +104,7 @@ img {
     background: #007bb5;
     color: white;
 }
+
 .fa {
     padding: 4px;
     font-size: 23px;
@@ -107,9 +122,11 @@ img {
     background: #3B5998;
     color: white;
 }
+
 .fa-github {
     color: black;
 }
+
 .fa-envelope {
     color: red;
 }
@@ -118,6 +135,7 @@ img {
     margin-left: 200px;
     /*margin-right: 20px;*/
 }
+
 #certificate h1 {
     text-align: center;
 }
@@ -126,73 +144,95 @@ img {
     color: #5efb1d;
     font-weight: bolder;
 }
+
 .color75 h3:hover {
     color: #98ff58;
     font-weight: bolder;
 }
+
 .color70 h3:hover {
     color: #cef94a;
     font-weight: bolder;
 }
+
 .color55 h3:hover {
     color: #f3af32;
     font-weight: bolder;
 }
+
 #certificate a {
     text-decoration: none;
     color: black;
     font-size: 20px;
 }
+
 #certificate a h3 {
     margin-bottom: -15px;
 }
+
 #education {
     margin-left: 175px;
     margin-top: 5px;
 }
-.softuni{
+
+.softuni:hover {
+    box-shadow:1px  1px 1px 1px #9dff00;
+}
+
+.softuni {
     width: 20%;
     height: 10%;
     border-radius: 3px;
     margin-left: -45px;
 }
+
 .text {
     margin-top: -111px;
     margin-left: 55px;
 }
-.text h3{
+
+.text h3 {
     font-size: 23px;
     margin-top: 23px;
     margin-bottom: -18px;
 }
-.text h4{
+
+.text h4 {
     font-size: 20px;
     margin-top: 15px;
 }
+
 .data-education {
     margin-top: -27px;
     font-family: cursive;
     font-size: 13px;
 }
+
 .text span {
     margin-right: 25px;
 }
-.text ul{
+
+.text ul {
     margin-top: 7px;
 }
-.courses{
+
+.courses {
     margin-top: -10px;
 }
+
 #projects {
     margin-left: 90px;
 }
+
 #projects a {
     text-decoration: none;
     color: black;
 }
+
 #projects a:hover {
     color: rgb(104, 253, 4);
 }
+
 #projects div {
     margin-left: 55px;
 }
