Made soft skills and interests

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -14,8 +14,8 @@
     <a href="#certificate">Certificates</a>
     <a href="#education">Education</a>
     <a href="#projects">Projects</a>
-    <a>Soft Skills</a>
-    <a>Interests</a>
+    <a href="#soft">Soft Skills</a>
+    <a href="#interests">Interests</a>
 </nav>
 <div class="info" th:object="${info}">
     <img src="/images/Iliyan.jpg">
@@ -241,6 +241,27 @@
             <a href="https://github.com/iliyanStavrev/Coffe-Shop">
                 <h2>Coffee Shop</h2>
             </a>
+        </div>
+    </div>
+    <div id="soft">
+        <h1>Soft Skills</h1>
+        <div>
+            <span>Teamwork</span>
+            <span>Problem Solving</span>
+            <span>Adaptability</span><br>
+            <span>Persistence</span>
+            <span>Humble</span>
+        </div>
+    </div>
+    <div id="interests">
+        <h1>Interests</h1>
+        <div>
+            <span>Learning front end framework like React</span>
+            <span>
+                 <img class="logos" src="https://upload.wikimedia.org/wikipedia/commons/a/a7/React-icon.svg"> <br>
+                , Angular <img src="https://upload.wikimedia.org/wikipedia/commons/c/cf/Angular_full_color_logo.svg">
+            </span>
+            <p>Basketball and others sports!</p>
         </div>
     </div>
 </div>
