--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -174,6 +174,9 @@ img {
     margin-left: 175px;
     margin-top: 5px;
 }
+#education h1{
+    margin-left: 67px;
+}
 
 .softuni:hover {
     box-shadow:1px  1px 1px 1px #9dff00;
@@ -235,4 +238,30 @@ img {
 
 #projects div {
     margin-left: 55px;
+}
+#soft {
+    margin-left: 130px;
+    margin-top: 20px;
+}
+#soft h1{
+   margin-left: 100px;
+}
+#soft span{
+    display: inline-block;
+    background-color: #5efb1d80;
+    font-size: 20px;
+    padding: 2px;
+    border-radius: 2px;
+    color: black;
+    margin-right: 7px;
+    margin-top: 7px;
+    box-shadow: 2px -1px 2px black;
+}
+#interests{
+    margin-left: 155px;
+    margin-top: 10px;
+    font-size: 20px;
+}
+#interests h1{
+    margin-left: 105px;
 }
