--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -243,27 +243,27 @@
             </a>
         </div>
     </div>
-    <div id="soft">
-        <h1>Soft Skills</h1>
-        <div>
-            <span>Teamwork</span>
-            <span>Problem Solving</span>
-            <span>Adaptability</span><br>
-            <span>Persistence</span>
-            <span>Humble</span>
-        </div>
-    </div>
-    <div id="interests">
-        <h1>Interests</h1>
-        <div>
-            <span>Learning front end framework like React</span>
-            <span>
-                 <img class="logos" src="https://upload.wikimedia.org/wikipedia/commons/a/a7/React-icon.svg"> <br>
-                , Angular <img src="https://upload.wikimedia.org/wikipedia/commons/c/cf/Angular_full_color_logo.svg">
-            </span>
-            <p>Basketball and others sports!</p>
-        </div>
-    </div>
+<!--    <div id="soft">-->
+<!--        <h1>Soft Skills</h1>-->
+<!--        <div>-->
+<!--            <span>Teamwork</span>-->
+<!--            <span>Problem Solving</span>-->
+<!--            <span>Adaptability</span><br>-->
+<!--            <span>Persistence</span>-->
+<!--            <span>Humble</span>-->
+<!--        </div>-->
+<!--    </div>-->
+<!--    <div id="interests">-->
+<!--        <h1>Interests</h1>-->
+<!--        <div>-->
+<!--            <span>Learning front end framework like React</span>-->
+<!--            <span>-->
+<!--                 <img class="logos" src="https://upload.wikimedia.org/wikipedia/commons/a/a7/React-icon.svg"> <br>-->
+<!--                , Angular <img src="https://upload.wikimedia.org/wikipedia/commons/c/cf/Angular_full_color_logo.svg">-->
+<!--            </span>-->
+<!--            <p>Basketball and others sports!</p>-->
+<!--        </div>-->
+<!--    </div>-->
 </div>
 
 </body>
